Bug 573926 - Increase the main toolbar's padding-top so that less of the locationbar's focus ring is cut off in small-icons mode. r=dao
UltraBlame original commit: 6d842b887012d65fb4f5afca56270a6c7c334526

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -10580,20 +10580,6 @@ none
 nav
 -
 bar
-{
-padding
--
-top
-:
-0
-!
-important
-;
-}
-#
-nav
--
-bar
 [
 collapsed
 =
